--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
   background: black;
@@ -33,7 +41,7 @@ body {
 
 .modal-content p {
   color: gray;
-  margin-bottom: 1rem;
+  margin: 0 0 1rem 0;
 }
 
 .modal-content p, .start-button {
@@ -46,12 +54,14 @@ body {
   line-height: 2.5rem;
   font-weight: 700;
   line-height: 1;
+  margin: 0;
 }
 
 .start-button {
   color: white;
   width: 100%;
   padding: 0.75rem 0 0.75rem 0;
+  border: none;
   border-radius: 9999px;
   background-color: rgba(59, 130, 246);
 }
